--- a/TextTreeJ_Job/TT.ini
+++ b/TextTreeJ_Job/TT.ini
@@ -19,8 +19,8 @@
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>487</win_pos_x>
-<win_pos_y>179</win_pos_y>
+<win_pos_x>243</win_pos_x>
+<win_pos_y>387</win_pos_y>
 </ver0_4>
 <ver0_5>
 <tab_width>8</tab_width>
@@ -28,7 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>C:\Users\cyclone-staff\Desktop\TextTreeJob\PuzzleDerby\バグチェック.txt</last_edited>
+<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\PuzzleDerby\Ver3.4　マルチ期間内初顔合わせ\駄文.txt</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
