--- a/TextTreeJ_Job/TT.ini
+++ b/TextTreeJ_Job/TT.ini
@@ -5,8 +5,8 @@
 	<font_weight>90</font_weight>
 </ver0_0>
 <ver0_1>
-<height>736</height>
-<width>888</width>
+<height>634</height>
+<width>826</width>
 <auto_save>1</auto_save>
 </ver0_1>
 <ver0_3>
@@ -19,8 +19,8 @@
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>243</win_pos_x>
-<win_pos_y>387</win_pos_y>
+<win_pos_x>524</win_pos_x>
+<win_pos_y>207</win_pos_y>
 </ver0_4>
 <ver0_5>
 <tab_width>8</tab_width>
@@ -28,7 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\PuzzleDerby\Ver3.4　マルチ期間内初顔合わせ\駄文.txt</last_edited>
+<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\PuzzleDerby\Ver3.4　マルチ期間内初顔合わせ\1p.png</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
@@ -90,7 +90,7 @@
 		<tree_font_style>90</tree_font_style>
 	<check_same_tab_width>1</check_same_tab_width>
 	<check_right_tree>0</check_right_tree>
-	<exec_full_screen>0</exec_full_screen>
+	<exec_full_screen>1</exec_full_screen>
 	<focus_move>1</focus_move>
 	<stay_on_top>0</stay_on_top>
 	<keep_cursor_column>1</keep_cursor_column>
