Text個人ﾌｧｲﾙ更新、gitcloneに無視ファイル追加

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /SequenceZu/Library
 /TextTreeJ_ShequenceZu/TextTree.exe
 /TextTreeJ_Job/PuzzleDerby
+/SequenceZu/SequenceZu-csharp.sln
+/SequenceZu/SequenceZu.sln
+/SequenceZu/SequenceZu.userprefs
