--- a/TextTreeJ_ShequenceZu/TT.ini
+++ b/TextTreeJ_ShequenceZu/TT.ini
@@ -5,7 +5,7 @@
 	<font_weight>90</font_weight>
 </ver0_0>
 <ver0_1>
-<height>472</height>
+<height>479</height>
 <width>980</width>
 <auto_save>1</auto_save>
 </ver0_1>
@@ -19,8 +19,8 @@
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>219</win_pos_x>
-<win_pos_y>174</win_pos_y>
+<win_pos_x>255</win_pos_x>
+<win_pos_y>187</win_pos_y>
 </ver0_4>
 <ver0_5>
 <tab_width>8</tab_width>
@@ -28,6 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
+<last_edited>D:\Create\ER\SequenceZu\TextTreeJ_ShequenceZu\Linux\ネットワーク.txt</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
