--- a/TextTreeJ_Job/TT.ini
+++ b/TextTreeJ_Job/TT.ini
@@ -28,7 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\PuzzleDerby\Ver3.4　マルチ期間内初顔合わせ\1p.png</last_edited>
+<last_edited>D:\Create\ER\SequenceZu2\TextTreeJ_Job\Gradle\駄文.txt</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
