--- a/TextTreeJ_Job/TT.ini
+++ b/TextTreeJ_Job/TT.ini
@@ -5,31 +5,31 @@
 	<font_weight>90</font_weight>
 </ver0_0>
 <ver0_1>
-<height>800</height>
-<width>1099</width>
+<height>591</height>
+<width>761</width>
 <auto_save>1</auto_save>
 </ver0_1>
 <ver0_3>
 <root00>
 	<root_name>.</root_name>
 	<root_path>.</root_path>
-	<split>253</split>
+	<split>200</split>
 </root00>
 	<root_bbs>0</root_bbs>
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>477</win_pos_x>
-<win_pos_y>49</win_pos_y>
+<win_pos_x>257</win_pos_x>
+<win_pos_y>51</win_pos_y>
 </ver0_4>
 <ver0_5>
-<tab_width>4</tab_width>
+<tab_width>8</tab_width>
 <file_ext>txt,rtf,csv,tsv,png,jpg,gif,bmp,mht,pdf</file_ext>
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\PuzzleDerby\バグチェック.txt</last_edited>
-<edit_margin>0</edit_margin>
+<last_edited>C:\Project\UMLSequence\TextTreeJ_Job\Git\credential.txt</last_edited>
+<edit_margin>10</edit_margin>
 </ver0_6>
 <ver0_7>
 </ver0_7>
@@ -39,20 +39,18 @@
 </ver0_8>
 <ver0_9>
 	<regex_string_color>
-	<regex_item><regex_string>○</regex_string><regex_color></regex_color><regex_color_back></regex_color_back></regex_item>
-	<regex_item><regex_string>○</regex_string><regex_color>rgb(0, 255, 64)</regex_color><regex_color_back></regex_color_back></regex_item>
 	</regex_string_color>
 	<ins_time_sec>0</ins_time_sec>
 	<disp_no_task>0</disp_no_task>
 	<ins_col_str>0</ins_col_str>
 	<no_show_under>0</no_show_under>
-	<set_back_color_chk>1</set_back_color_chk>
-	<set_back_color>rgb(183, 153, 121)</set_back_color>
+	<set_back_color_chk>0</set_back_color_chk>
+	<set_back_color></set_back_color>
 	<set_find_back_color_chk>0</set_find_back_color_chk>
-	<set_find_back_color>rgb(240, 240, 240)</set_find_back_color>
+	<set_find_back_color></set_find_back_color>
 </ver0_9>
 <ver1_0>
-	<check_double_exec>1</check_double_exec>
+	<check_double_exec>0</check_double_exec>
 	<check_edit_under_color>0</check_edit_under_color>
 	<color_edit_under_color>rgb(205, 205, 205)</color_edit_under_color>
 	<new_text_auto_name>0</new_text_auto_name>
@@ -62,14 +60,14 @@
 	<check_auto_indent>0</check_auto_indent>
 </ver1_1>
 <ver1_2>
-	<check_image_resize>1</check_image_resize>
+	<check_image_resize>0</check_image_resize>
 </ver1_2>
 <ver1_3>
 	<check_extttt_enable>1</check_extttt_enable>
 </ver1_3>
 <ver2_0>
 	<check_date_sep_slash>0</check_date_sep_slash>
-	<check_save_cursor_pos>0</check_save_cursor_pos>
+	<check_save_cursor_pos>1</check_save_cursor_pos>
 		<tree_font_face>MS UI Gothic</tree_font_face>
 		<tree_font_point>9</tree_font_point>
 		<tree_font_weight>90</tree_font_weight>
@@ -79,7 +77,7 @@
 	<exec_full_screen>0</exec_full_screen>
 	<focus_move>1</focus_move>
 	<stay_on_top>0</stay_on_top>
-	<keep_cursor_column>0</keep_cursor_column>
+	<keep_cursor_column>1</keep_cursor_column>
 </ver2_0>
 <ver3_0>
 	<make_back_auto>1</make_back_auto>
