テキスト、トライアングルの色変更の実装、その他

--- a/TextTreeJ_ShequenceZu/TT.ini
+++ b/TextTreeJ_ShequenceZu/TT.ini
@@ -1,26 +1,26 @@
 <ver0_0>
-	<font_face>MS UI Gothic</font_face>
+	<font_face>ＭＳ ゴシック</font_face>
 	<font_point>10</font_point>
 	<font_style>90</font_style>
 	<font_weight>90</font_weight>
 </ver0_0>
 <ver0_1>
-<height>479</height>
-<width>980</width>
+<height>691</height>
+<width>763</width>
 <auto_save>1</auto_save>
 </ver0_1>
 <ver0_3>
 <root00>
 	<root_name>.</root_name>
 	<root_path>.</root_path>
-	<split>200</split>
+	<split>-1</split>
 </root00>
 	<root_bbs>0</root_bbs>
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>328</win_pos_x>
-<win_pos_y>269</win_pos_y>
+<win_pos_x>369</win_pos_x>
+<win_pos_y>61</win_pos_y>
 </ver0_4>
 <ver0_5>
 <tab_width>8</tab_width>
@@ -28,7 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>D:\Create\ER\SequenceZu\TextTreeJ_ShequenceZu\Linux\駄文.txt</last_edited>
+<last_edited>D:\Create\ER\SequenceZu\TextTreeJ_ShequenceZu\ブログ\駄文.txt</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
