--- a/TextTreeJ_ShequenceZu/TT.ini
+++ b/TextTreeJ_ShequenceZu/TT.ini
@@ -19,8 +19,8 @@
 	<root_mixi>0</root_mixi>
 </ver0_3>
 <ver0_4>
-<win_pos_x>74</win_pos_x>
-<win_pos_y>137</win_pos_y>
+<win_pos_x>155</win_pos_x>
+<win_pos_y>353</win_pos_y>
 </ver0_4>
 <ver0_5>
 <tab_width>8</tab_width>
@@ -28,7 +28,7 @@
 <char_code>0</char_code>
 </ver0_5>
 <ver0_6>
-<last_edited>D:\Create\ER\SequenceZu\TextTreeJ_ShequenceZu\バグメモ.txt</last_edited>
+<last_edited>D:\Create\ShequenceZu\SequenceZu\TextTreeJ_ShequenceZu\スクリプトサンプル\論理ペン.txt</last_edited>
 <edit_margin>0</edit_margin>
 </ver0_6>
 <ver0_7>
